--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,28 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="dark">
     <ion-title>
-      Ionic Blank
+      civRandomizer
     </ion-title>
+    <ion-buttons end>
+    	<button ion-button>
+    		Prefs
+    	</button>
+    </ion-buttons>
   </ion-navbar>
+
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+	<ion-item>
+		<ion-label>Game:</ion-label>
+		<ion-select [(ngModel)]="game">
+			<ion-option *ngFor="let game of games | keys" [value]="game">{{game}}</ion-option>
+		</ion-select>
+	</ion-item>
+
+  <button ion-button full>
+  	Randomize unselected
+  </button>
+
+
 </ion-content>
